--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.3.0 / 2013-03-28
+
+* Localwiki::Resource subclasses used to represent resources
+* Better docs
+
 === 0.2.0 / 2013-03-16
 
 * Implemented CRUD methods
